Fixed glitch, forgot to put position:relative

--- a/index.html
+++ b/index.html
@@ -10,15 +10,129 @@
 
 </head>
 <body data-theme="dark">
+
     <!-- NAVBAR -->
     <nav class = "navbar">
         <ul class = "link-group">
             <li class = "link active"><a href="#">Home</a></li>
-            <li class = "link"><a href="#">Games</a></li>
             <li class = "link"><a href="#">About</a></li>
+            <li class = "link"><a href="#">Games</a></li>
             <li class = "link"><a href="#">Contact</a></li>
         </ul>
     </nav>
+
+    <!--HOME SECTION-->
+    <section class = "home-section active">
+        <h1 class = "hero-heading">Welcome to <br> EDUPLAY</h1>
+        <img src="images/ward.png" class="home-image" alt="">
+    </section>
+
+
+    <section class="games-section active">
+        <h1 class="games-heading">Games</h1>
+        <div class="games-container">
+                
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">ENGLISH GAME 1</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">ENGLISH GAME 2</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">ENGLISH GAME 3</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">MATHS GAME 1</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">MATHS GAME 2</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">MATHS GAME 3</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">SCIENCE GAME 1</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">SCIENCE GAME 2</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "games-card">
+                <img class = "games-img" src="images/project-1.png" alt="">
+                <div class="games-content">
+                    <h1 class="game-title">SCIENCE GAME 3</h1>
+                    <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
+                    <div class ="games-btn-grp">
+                    <button class = "play-btn">PLAY</button>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </section>
 
 
     <!--SCRIPT-->
