Changed grid to flexbox for game cards
Title. I changed this because it;s better. Also had a glitch where I couldn't get last game card to center itself.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
     </section>
 
 
+    <!-- ABOUT SECTION -->
+    <section class="about-section">
+        <h1 class="about-heading">
+            <div class="info-container">
+                <img src="" alt="">
+                <p class="about-info"></p>
+            </div>
+        </h1>
+    </section>
+
+    
+
+
+    <!-- GAME SECTION -->
     <section class="games-section active">
         <h1 class="games-heading">Games</h1>
         <div class="games-container">
@@ -38,7 +52,7 @@
                     <h1 class="game-title">ENGLISH GAME 1</h1>
                     <p class="game-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit vitae delectus cumque repudiandae aliquam optio accusamus natus nobis! Nam, sunt?</p>
                     <div class ="games-btn-grp">
-                    <button class = "play-btn">PLAY</button>
+                        <button class = "play-btn">PLAY</button>
                     </div>
                 </div>
             </div>
