--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduplay</title>
 
+    <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body data-theme="dark">
+<body data-theme="light">
 
     <!-- NAVBAR -->
     <nav class = "navbar">
+        <h1 class="nav-logo">EDUPLAY</h1>
         <ul class = "link-group">
             <li class = "link active"><a href="#">Home</a></li>
             <li class = "link"><a href="#">About</a></li>
@@ -23,19 +26,31 @@
 
     <!--HOME SECTION-->
     <section class = "home-section active">
-        <h1 class = "hero-heading">Welcome to <br> EDUPLAY</h1>
+        <h1 class = "hero-heading">Welcome to EDUPLAY</h1>
         <img src="images/ward.png" class="home-image" alt="">
     </section>
 
 
     <!-- ABOUT SECTION -->
+    <h1 class="about-heading">About</h1> 
     <section class="about-section">
-        <h1 class="about-heading">
-            <div class="info-container">
-                <img src="" alt="">
-                <p class="about-info"></p>
-            </div>
-        </h1>
+        <div class=about-cards>
+                <div class = "about-card">
+                    <img src="images/project-2.png" alt="">
+                    <div class="info-container">
+                    <h2 class= "question">What is Eduplay?</h2>
+                    <p class="about-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                </div>
+
+                <div class = "about-card">
+                    <img src="images/project-3.png" alt="">
+                    <div class="info-container">
+                    <h2 class= "question">How to play the games?</h2>
+                    <p class="about-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                </div>
+        </div>
     </section>
 
     
