--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
     <!-- NAVBAR -->
     <nav class = "navbar">
-        <h1 class="nav-logo">EDUPLAY</h1>
+        <div class="logo">
+            <img class= "nav-logo" src="images/eduplaylogo.png" alt="">
+            <h1 class="nav-name">EDUPLAY</h1>
+        </div>
         <ul class = "link-group">
             <li class = "link active"><a href="#">Home</a></li>
             <li class = "link"><a href="#">About</a></li>
