--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class = "about-card">
                     <img src="images/project-3.png" alt="">
                     <div class="info-container">
-                    <h2 class= "question">How to play the games?</h2>
+                    <h2 class= "question">How to get started?</h2>
                     <p class="about-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
                 </div>
