--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--HOME SECTION-->
     <section class = "home-section active">
         <h1 class = "hero-heading">Welcome to EDUPLAY</h1>
-        <img src="images/ward.png" class="home-image" alt="">
+        <img src="images/background-1.png" class="home-image" alt="">
     </section>
 
 
