--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduplay</title>
 
+    <link rel="icon" href = "images/eduplaylogo.png">
     <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="style.css">
