Centered main heading text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <!--HOME SECTION-->
-    <section class = "home-section active">
+    <section class = "home-section">
         <h1 class = "hero-heading">Welcome to EDUPLAY</h1>
         <img src="images/background-1.png" class="home-image" alt="">
     </section>
